--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "rellax": "^1.12.1",
+    "wowjs": "^1.1.3"
   },
   "dependencies": {}
 }
